sumo/tests/traci/ChangeRoute/InvalidEdge/options.traci
sumo.exe --no-step-log --net-file net.net.xml --route-files routes.rou.xml --penetration 1.0 --remote-port 8818 --netstate-dump netstate_dump.xml TraCITestClient.exe -def changeroute_invalidedge.prog -p 8818 -h localhost -o testclient_out.txt